[gd_scene load_steps=19 format=3 uid="uid://c4mrwvfuplghq"]

[ext_resource type="Script" uid="uid://bdkma7y1t1mum" path="res://Scripts/Tablero.gd" id="1_2e3ot"]
[ext_resource type="Texture2D" uid="uid://cgwogkoc2bhwl" path="res://Sprites/vacio_b.png" id="2_lb43w"]
[ext_resource type="Theme" uid="uid://b7qccix6ms7od" path="res://Sprites/Tema.tres" id="2_rjika"]
[ext_resource type="Texture2D" uid="uid://bouprt1fxm4qv" path="res://Sprites/vacio_a.png" id="3_018r0"]
[ext_resource type="Texture2D" uid="uid://dnrhqwhf5arpv" path="res://Sprites/sombra_b.png" id="4_qta1s"]
[ext_resource type="Texture2D" uid="uid://c0jc27ldhx7qx" path="res://Sprites/sombra_a.png" id="5_igt1x"]
[ext_resource type="Texture2D" uid="uid://cv54m5jo8ogm4" path="res://Sprites/luz_b.png" id="6_5ljmw"]
[ext_resource type="Texture2D" uid="uid://chqu64emn5she" path="res://Sprites/luz_a.png" id="7_bq6bi"]
[ext_resource type="Texture2D" uid="uid://qs07tdwrm3gs" path="res://Sprites/hexagono_strip3.png" id="9_3h824"]
[ext_resource type="AudioStream" uid="uid://c83fkradt3w0d" path="res://Sounds/Turno.wav" id="10_g108j"]
[ext_resource type="AudioStream" uid="uid://7ft8d0j3og2a" path="res://Sounds/Fin.wav" id="11_xax0o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2pdaj"]
radius = 9.05539

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcs"]
size = Vector2(295, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_caioh"]
size = Vector2(118, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3d4w0"]
size = Vector2(119, 187)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvu5f"]
size = Vector2(167, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exvk6"]
size = Vector2(167, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pdh7h"]
size = Vector2(132.5, 156.5)

[node name="Tablero" type="Node2D"]
script = ExtResource("1_2e3ot")
metadata/_edit_lock_ = true

[node name="Hexagramas" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Mouse" type="Area2D" parent="."]
z_index = 3
collision_layer = 0
collision_mask = 3
monitorable = false
metadata/_edit_lock_ = true

[node name="Coli" type="CollisionShape2D" parent="Mouse"]
shape = SubResource("CircleShape2D_2pdaj")
metadata/_edit_lock_ = true

[node name="Imagen" type="Sprite2D" parent="Mouse"]
metadata/_edit_lock_ = true

[node name="Camara" type="Camera2D" parent="."]
position_smoothing_speed = 0.0
metadata/_edit_lock_ = true

[node name="GUI" type="Area2D" parent="Camara"]
z_index = 2
collision_layer = 2
collision_mask = 0
monitoring = false
metadata/_edit_lock_ = true

[node name="Acciones" type="Panel" parent="Camara/GUI"]
offset_left = -565.0
offset_top = 228.0
offset_right = -392.0
offset_bottom = 317.0
theme = ExtResource("2_rjika")
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Acciones"]
layout_mode = 0
offset_left = 3.0
offset_right = 252.0
offset_bottom = 56.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Vacio - Sombra - Luz"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="SelVacio" type="TextureButton" parent="Camara/GUI/Acciones"]
layout_mode = 0
offset_left = 7.0
offset_top = 35.0
offset_right = 207.0
offset_bottom = 235.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("2_lb43w")
texture_pressed = ExtResource("3_018r0")
texture_hover = ExtResource("3_018r0")
texture_disabled = ExtResource("2_lb43w")
metadata/_edit_lock_ = true

[node name="SelSombra" type="TextureButton" parent="Camara/GUI/Acciones"]
layout_mode = 0
offset_left = 62.0
offset_top = 34.0
offset_right = 262.0
offset_bottom = 234.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("4_qta1s")
texture_pressed = ExtResource("5_igt1x")
texture_hover = ExtResource("5_igt1x")
texture_disabled = ExtResource("4_qta1s")
metadata/_edit_lock_ = true

[node name="SelLuz" type="TextureButton" parent="Camara/GUI/Acciones"]
layout_mode = 0
offset_left = 116.0
offset_top = 34.0
offset_right = 316.0
offset_bottom = 234.0
scale = Vector2(0.25, 0.25)
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("6_5ljmw")
texture_pressed = ExtResource("7_bq6bi")
texture_hover = ExtResource("7_bq6bi")
texture_disabled = ExtResource("6_5ljmw")
metadata/_edit_lock_ = true

[node name="Turno" type="Panel" parent="Camara/GUI"]
offset_left = -567.0
offset_top = -315.0
offset_right = -269.0
offset_bottom = -276.0
theme = ExtResource("2_rjika")
metadata/_edit_lock_ = true

[node name="TxtTurno" type="Label" parent="Camara/GUI/Turno"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 70.0
offset_top = 1.0
offset_right = 283.0
offset_bottom = 38.0
text = "Jugador"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ButMenu" type="Button" parent="Camara/GUI/Turno"]
layout_mode = 0
offset_left = 7.0
offset_top = 1.0
offset_right = 49.0
offset_bottom = 36.0
focus_mode = 0
theme = ExtResource("2_rjika")
text = "<"
metadata/_edit_lock_ = true

[node name="Mision" type="Control" parent="Camara/GUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 391.0
offset_top = -47.0
offset_right = 563.0
offset_bottom = 311.0
theme = ExtResource("2_rjika")
metadata/_edit_lock_ = true

[node name="Fondo" type="Panel" parent="Camara/GUI/Mision"]
layout_mode = 0
offset_right = 172.0
offset_bottom = 287.0
metadata/_edit_lock_ = true

[node name="Minimizado" type="Panel" parent="Camara/GUI/Mision"]
layout_mode = 0
offset_top = 290.0
offset_right = 172.0
offset_bottom = 356.0
metadata/_edit_lock_ = true

[node name="M1" type="Control" parent="Camara/GUI/Mision"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Mision/M1"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 38.0
theme = ExtResource("2_rjika")
text = "Luz"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Mision/M1"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 231.0
offset_bottom = 391.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Ganas si al finalizar tu turno hay $ fichas de luz más que fichas de sombra.
O si al final del juego hay más fichas de luz que de sombra"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="M2" type="Control" parent="Camara/GUI/Mision"]
anchors_preset = 0
offset_left = 150.0
offset_right = 190.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Mision/M2"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 38.0
theme = ExtResource("2_rjika")
text = "Sombra"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Mision/M2"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 231.0
offset_bottom = 391.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Ganas si al finalizar tu turno hay $ fichas de sombra  más que fichas de luz.
O si al final del juego hay más fichas de sombra  que de luz"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="M3" type="Control" parent="Camara/GUI/Mision"]
anchors_preset = 0
offset_left = 300.0
offset_right = 340.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Mision/M3"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 38.0
theme = ExtResource("2_rjika")
text = "Conexión"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Mision/M3"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 231.0
offset_bottom = 391.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Ganas si al finalizar tu turno hay $ fichas del mismo tipo en línea recta.
O hay un aro de fichas del mismo tipo, es decir, en torno a una ficha"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="M4" type="Control" parent="Camara/GUI/Mision"]
anchors_preset = 0
offset_left = 450.0
offset_right = 490.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Mision/M4"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 38.0
theme = ExtResource("2_rjika")
text = "L. Diversa"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Mision/M4"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 231.0
offset_bottom = 391.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Ganas si al finalizar tu turno hay $ fichas en línea recta, y además están intercaladas según su tipo (luz o sombra)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="M5" type="Control" parent="Camara/GUI/Mision"]
anchors_preset = 0
offset_left = 600.0
offset_right = 640.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Mision/M5"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 38.0
theme = ExtResource("2_rjika")
text = "Equilibrio"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Mision/M5"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 231.0
offset_bottom = 391.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Ganas si al final del juego hay un conteo equitativo entre fichas de luz y de sombra"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="M6" type="Control" parent="Camara/GUI/Mision"]
anchors_preset = 0
offset_left = 750.0
offset_right = 790.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Mision/M6"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 38.0
theme = ExtResource("2_rjika")
text = "Muerte"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Mision/M6"]
layout_mode = 0
offset_left = 11.0
offset_top = 41.0
offset_right = 231.0
offset_bottom = 391.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Ganas cuando elimines $ fichas de luz y $ fichas de sombra respectivamente"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="ButVer" type="Button" parent="Camara/GUI/Mision"]
layout_mode = 0
offset_left = 23.0
offset_top = 306.0
offset_right = 153.0
offset_bottom = 341.0
focus_mode = 0
toggle_mode = true
text = "Ver mi misión"

[node name="Estadisticas" type="Control" parent="Camara/GUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 446.0
offset_top = -313.0
offset_right = 566.0
offset_bottom = -258.0
theme = ExtResource("2_rjika")
metadata/_edit_lock_ = true

[node name="Personales" type="Panel" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -1011.0
offset_top = 44.0
offset_right = -889.0
offset_bottom = 134.0
metadata/_edit_lock_ = true

[node name="Titulo1" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -1009.0
offset_top = 43.0
offset_right = -827.0
offset_bottom = 99.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Eliminadas"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="LuzKill" type="Sprite2D" parent="Camara/GUI/Estadisticas"]
position = Vector2(-975, 103)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_3h824")
hframes = 3
frame = 2
metadata/_edit_lock_ = true

[node name="TxtLuzKill" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -996.0
offset_top = 80.0
offset_right = -954.0
offset_bottom = 127.0
theme = ExtResource("2_rjika")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SombraKill" type="Sprite2D" parent="Camara/GUI/Estadisticas"]
position = Vector2(-925, 103)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_3h824")
hframes = 3
frame = 1
metadata/_edit_lock_ = true

[node name="TxtSombraKill" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -946.0
offset_top = 79.0
offset_right = -904.0
offset_bottom = 126.0
theme = ExtResource("2_rjika")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Totales" type="Panel" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -7.0
offset_right = 115.0
offset_bottom = 90.0
metadata/_edit_lock_ = true

[node name="Titulo2" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -9.0
offset_top = -1.0
offset_right = 173.0
offset_bottom = 55.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "Disponibles"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="LuzTot" type="Sprite2D" parent="Camara/GUI/Estadisticas"]
position = Vector2(28, 61)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_3h824")
hframes = 3
frame = 2
metadata/_edit_lock_ = true

[node name="TxtLuzTot" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = 7.0
offset_top = 38.0
offset_right = 49.0
offset_bottom = 85.0
theme = ExtResource("2_rjika")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SombraTot" type="Sprite2D" parent="Camara/GUI/Estadisticas"]
position = Vector2(78, 61)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_3h824")
hframes = 3
frame = 1
metadata/_edit_lock_ = true

[node name="TxtSombraTot" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = 57.0
offset_top = 38.0
offset_right = 99.0
offset_bottom = 85.0
theme = ExtResource("2_rjika")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Puestos" type="Panel" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -7.0
offset_top = 100.0
offset_right = 115.0
offset_bottom = 190.0
metadata/_edit_lock_ = true

[node name="Titulo3" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = -9.0
offset_top = 99.0
offset_right = 173.0
offset_bottom = 155.0
scale = Vector2(0.666, 0.666)
theme = ExtResource("2_rjika")
text = "En tablero"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="LuzPuesta" type="Sprite2D" parent="Camara/GUI/Estadisticas"]
position = Vector2(28, 161)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_3h824")
hframes = 3
frame = 2
metadata/_edit_lock_ = true

[node name="TxtLuzPuesta" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = 7.0
offset_top = 138.0
offset_right = 49.0
offset_bottom = 185.0
theme = ExtResource("2_rjika")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SombraPuesta" type="Sprite2D" parent="Camara/GUI/Estadisticas"]
position = Vector2(78, 161)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_3h824")
hframes = 3
frame = 1
metadata/_edit_lock_ = true

[node name="TxtSombraPuesta" type="Label" parent="Camara/GUI/Estadisticas"]
layout_mode = 0
offset_left = 57.0
offset_top = 138.0
offset_right = 99.0
offset_bottom = 185.0
theme = ExtResource("2_rjika")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Resultados" type="Panel" parent="Camara/GUI"]
offset_left = -127.0
offset_top = -311.0
offset_right = 128.0
offset_bottom = -76.0
theme = ExtResource("2_rjika")
metadata/_edit_lock_ = true

[node name="Titulo" type="Label" parent="Camara/GUI/Resultados"]
layout_mode = 0
offset_left = 47.0
offset_top = 6.0
offset_right = 207.0
offset_bottom = 44.0
theme = ExtResource("2_rjika")
text = "Resultados"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/GUI/Resultados"]
layout_mode = 0
offset_left = 13.0
offset_top = 47.0
offset_right = 300.0
offset_bottom = 203.0
scale = Vector2(0.8, 0.8)
theme = ExtResource("2_rjika")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="ButMenu" type="Button" parent="Camara/GUI/Resultados"]
layout_mode = 0
offset_left = 80.0
offset_top = 184.0
offset_right = 178.0
offset_bottom = 219.0
focus_mode = 0
theme = ExtResource("2_rjika")
text = "Salir"
metadata/_edit_lock_ = true

[node name="Mover" type="Control" parent="Camara/GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="ButUp" type="Button" parent="Camara/GUI/Mover"]
offset_left = -517.0
offset_top = -79.0
offset_right = -477.0
offset_bottom = -32.0
focus_mode = 0
theme = ExtResource("2_rjika")
theme_override_font_sizes/font_size = 25
text = "^"
metadata/_edit_lock_ = true

[node name="ButDown" type="Button" parent="Camara/GUI/Mover"]
offset_left = -518.0
offset_top = -25.0
offset_right = -478.0
offset_bottom = 22.0
focus_mode = 0
theme = ExtResource("2_rjika")
theme_override_font_sizes/font_size = 25
text = "v"
metadata/_edit_lock_ = true

[node name="ButLeft" type="Button" parent="Camara/GUI/Mover"]
offset_left = -563.0
offset_top = -24.0
offset_right = -524.0
offset_bottom = 23.0
focus_mode = 0
theme = ExtResource("2_rjika")
theme_override_font_sizes/font_size = 25
text = "<"
metadata/_edit_lock_ = true

[node name="ButRight" type="Button" parent="Camara/GUI/Mover"]
offset_left = -470.0
offset_top = -24.0
offset_right = -432.0
offset_bottom = 23.0
focus_mode = 0
theme = ExtResource("2_rjika")
theme_override_font_sizes/font_size = 25
text = ">"
metadata/_edit_lock_ = true

[node name="ButZoomIn" type="Button" parent="Camara/GUI/Mover"]
offset_left = -539.0
offset_top = 26.0
offset_right = -501.0
offset_bottom = 73.0
focus_mode = 0
theme = ExtResource("2_rjika")
theme_override_font_sizes/font_size = 25
text = "+"
metadata/_edit_lock_ = true

[node name="ButZoomOut" type="Button" parent="Camara/GUI/Mover"]
offset_left = -491.0
offset_top = 25.0
offset_right = -454.0
offset_bottom = 72.0
focus_mode = 0
theme = ExtResource("2_rjika")
theme_override_font_sizes/font_size = 25
text = "-"
metadata/_edit_lock_ = true

[node name="Coli1" type="CollisionShape2D" parent="Camara/GUI"]
position = Vector2(-419.5, -296)
shape = SubResource("RectangleShape2D_kpjcs")
metadata/_edit_lock_ = true

[node name="Coli2" type="CollisionShape2D" parent="Camara/GUI"]
position = Vector2(-505, -224.5)
shape = SubResource("RectangleShape2D_caioh")
metadata/_edit_lock_ = true

[node name="Coli3" type="CollisionShape2D" parent="Camara/GUI"]
position = Vector2(500.5, -217.5)
shape = SubResource("RectangleShape2D_3d4w0")
metadata/_edit_lock_ = true

[node name="Coli4" type="CollisionShape2D" parent="Camara/GUI"]
position = Vector2(-478.5, 273.5)
shape = SubResource("RectangleShape2D_yvu5f")
metadata/_edit_lock_ = true

[node name="Coli5" type="CollisionShape2D" parent="Camara/GUI"]
position = Vector2(476.5, 276.5)
shape = SubResource("RectangleShape2D_exvk6")
metadata/_edit_lock_ = true

[node name="Coli6" type="CollisionShape2D" parent="Camara/GUI"]
position = Vector2(-496.25, -2.25)
shape = SubResource("RectangleShape2D_pdh7h")
metadata/_edit_lock_ = true

[node name="Turnito" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Watchdog" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SndTurno" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_g108j")

[node name="SndFin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_xax0o")

[connection signal="area_entered" from="Mouse" to="." method="_on_mouse_area_entered"]
[connection signal="area_exited" from="Mouse" to="." method="_on_mouse_area_exited"]
[connection signal="button_down" from="Camara/GUI/Acciones/SelVacio" to="." method="_on_sel_vacio_button_down"]
[connection signal="button_down" from="Camara/GUI/Acciones/SelSombra" to="." method="_on_sel_sombra_button_down"]
[connection signal="button_down" from="Camara/GUI/Acciones/SelLuz" to="." method="_on_sel_luz_button_down"]
[connection signal="button_down" from="Camara/GUI/Turno/ButMenu" to="." method="_on_but_menu_button_down"]
[connection signal="toggled" from="Camara/GUI/Mision/ButVer" to="." method="_on_but_ver_toggled"]
[connection signal="button_down" from="Camara/GUI/Resultados/ButMenu" to="." method="_on_but_menu_button_down"]
[connection signal="pressed" from="Camara/GUI/Mover/ButZoomIn" to="." method="_on_but_zoom_in_pressed"]
[connection signal="pressed" from="Camara/GUI/Mover/ButZoomOut" to="." method="_on_but_zoom_out_pressed"]
[connection signal="timeout" from="Turnito" to="." method="_on_turnito_timeout"]
[connection signal="timeout" from="Watchdog" to="." method="_on_watchdog_timeout"]
